syntax = "proto3";

package pb;

option go_package = "github.com/kanmo/response-cache/pb";

message UserResponse {
  string user_id = 1;
  string user_name = 2;
}